--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   },
   "name": "avalon-e-commerce",
   "version": "1.0.0",
-  "description": "@copyright by becodemy 2023",
+  "description": "@copyright by NAYEM AL TAREQ",
   "main": "backend/server.js",
   "devDependencies": {},
   "scripts": {
