--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e-shop-tutorial",
+  "name": "avalon-e-commerce",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -10,8 +10,8 @@
     "dev": "nodemon server.js",
     "start": "node server.js"
   },
-  "author": "shahriar Sajeeb",
-  "license": "ISC",
+  "author": "NAYEM AL TAREQ",
+  "license": "MUN",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
