--- a/package.json
+++ b/package.json
@@ -11,5 +11,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nayem Al Tareq",
-  "license": "ISC"
+  "license": "MUN"
 }
